Added common Nginx configuration

--- a/html/.nginx.conf
+++ b/html/.nginx.conf
@@ -1,5 +1,5 @@
 # .nginx.conf: Common Nginx config for Flex (to be included by virtualhost config)
-index index.php index.htm index.html
+index index.php index.htm index.html;
 
 # Deny Hidden files (include this one)
 location ~ /\. {
