Running under Nginx now seems stable

--- a/html/.nginx.conf
+++ b/html/.nginx.conf
@@ -1,18 +1,31 @@
 # .nginx.conf: Common Nginx config for Flex (to be included by virtualhost config)
-# Deny Hidden files (include this one)
+# Deny Hidden files (including this one)
 location ~ /\. {
 	deny all;
 }
 
-# Static assets
-location ~ /(admin|ui|customer)/(img|javascript|css)/ {
-	# Do nothing, other than serve statically
+location / {
+	# Try to serve the URI statically, URI/index.php, or pass to PHP to handle
+	try_files $uri @php;
 }
 
-# Pass everything else through to PHP
-location / {
-	index index.php index.htm index.html;
-
+# Pass .php files to PHP
+location ~ \.php$ {
 	include fastcgi_params;
+	fastcgi_pass unix:/var/tmp/php5-fpm.sock;
+}
+
+# Process non-exact paths as PHP
+location @php {
+	include fastcgi_params;
+	fastcgi_index index.php;
+
+	# Support URLs of the form /some/path/index.php/with/weird/subpath, which is widely used in Flex
+	fastcgi_split_path_info ^(.+\.php)(/?.+)$;
+	fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+	fastcgi_param PATH_INFO $fastcgi_path_info;
+	fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+
 	fastcgi_pass unix:/var/tmp/php5-fpm.sock;
 }
