not sure why this is required:

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -15,7 +15,7 @@
     "password": "cgeuea4krod",
     //"port": "22",
     
-    "remote_path": "/data/www/rmctainsh.ybs.net.au/",
+    "remote_path": "/data/www/demo.ybs.net.au/",
     "ignore_regex": "(\\.ffs_db|\\.sublime-project|\\.sublime-workspace|sftp-config\\.json|sftp-settings\\.json|\\.svn|\\.hg|\\.git|\\.bzr|_darcs|CVS|\\.DS_Store|Thumbs\\.db|desktop\\.ini|\\.settings|\\.project)",
     //"file_permissions": "664",
     //"dir_permissions": "775",
