.gitignore'd generated DO files for Sales Portal

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ sftp-config.json
 /lib/data/model/type/*
 /lib/framework/database_constants.php*
 /html/ui/javascript/credit_card_type.js
+/lib/classes/do/sales/base
